# discord_bot

./: .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: bot_deploy.yml
app/: __main__.py  bot.py
app/cogs/: bot_message.py  find_friends.py  find_friends_events.py  get_logs.py  settings.py  templates.py
app/core/: __init__.py  config.py  logs.py  messages.py  settings.py  utils.py
app/db/: __init__.py  declarative.py  session.py
app/db/crud/: __init__.py  crud_discord_config.py  crud_templates.py
app/db/models/: __init__.py  discord_config_model.py  templates.py
app/modals/: __init__.py  find_friend_modal.py  send_message_modal.py  template_modal.py
app/tools/: __init__.py  cooldown.py  template.py  time.py
docker/bot/: Dockerfile
migration/: env.py
migration/versions/: 519d24a4bbc8_.py  5a4e8cea0797_initial.py  73bc3b821d41_.py  bd3ad5c737f0_.py  f985b88e00e0_.py
