[tool.poetry]
name = "magic-helper-discord"
version = "0.1.0"
description = ""
authors = ["MaHryCT3 <mahryct123@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "magic_helper_discord"}]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.4.0"
python-dotenv = "^1.0.0"
loguru = "^0.6.0"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
select = ['Q', 'F', 'I', 'ANN', 'B', 'C4', 'TID', 'ARG', 'PLR']
ignore = ['ANN101', 'ANN204', 'ANN401', 'ANN002', 'ANN003', 'PLR0913']  
# ANN - https://beta.ruff.rs/docs/rules/#flake8-annotations-ann, 
# PLR0913 - Too many arguments


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Unused import
"tests/*" = ['ANN']  # Annotations
"app/tools/time.py" = ['PLR2004']
"migration/*" = ['F']

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.black]
skip-string-normalization = true
exclude = '(\.git|\.venv|\.vscode)'
line-length = 120